RESOLVED FIXED158537
[css-grid] CRASH when getting the computed style of a grid with only absolutely positioned children
https://bugs.webkit.org/show_bug.cgi?id=158537
Summary [css-grid] CRASH when getting the computed style of a grid with only absolute...
Sergio Villar Senin
Reported 2016-06-08 12:20:52 PDT
[css-grid] CRASH when getting the computed style of a grid with only absolutely positioned children
Attachments
Patch (6.33 KB, patch)
2016-06-08 12:28 PDT, Sergio Villar Senin
no flags
Archive of layout-test-results from ews100 for mac-yosemite (820.46 KB, application/zip)
2016-06-08 13:16 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-yosemite-wk2 (817.69 KB, application/zip)
2016-06-08 13:20 PDT, Build Bot
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (663.15 KB, application/zip)
2016-06-08 13:25 PDT, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-yosemite (1.47 MB, application/zip)
2016-06-08 13:37 PDT, Build Bot
no flags
Patch (12.50 KB, patch)
2016-06-09 04:03 PDT, Sergio Villar Senin
darin: review+
Sergio Villar Senin
Comment 1 2016-06-08 12:28:55 PDT
Build Bot
Comment 2 2016-06-08 13:16:47 PDT
Comment on attachment 280823 [details] Patch Attachment 280823 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1468378 New failing tests: fast/css-grid-layout/grid-template-shorthand-get-set.html
Build Bot
Comment 3 2016-06-08 13:16:52 PDT
Created attachment 280827 [details] Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-06-08 13:20:14 PDT
Comment on attachment 280823 [details] Patch Attachment 280823 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1468383 New failing tests: fast/css-grid-layout/grid-template-shorthand-get-set.html
Build Bot
Comment 5 2016-06-08 13:20:18 PDT
Created attachment 280830 [details] Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-06-08 13:24:59 PDT
Comment on attachment 280823 [details] Patch Attachment 280823 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1468381 New failing tests: fast/css-grid-layout/grid-template-shorthand-get-set.html
Build Bot
Comment 7 2016-06-08 13:25:02 PDT
Created attachment 280831 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 8 2016-06-08 13:37:22 PDT
Comment on attachment 280823 [details] Patch Attachment 280823 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1468396 New failing tests: editing/selection/selection-in-iframe-removed-crash.html fast/css-grid-layout/grid-template-shorthand-get-set.html
Build Bot
Comment 9 2016-06-08 13:37:25 PDT
Created attachment 280833 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Sergio Villar Senin
Comment 10 2016-06-09 04:03:36 PDT
Created attachment 280911 [details] Patch adjusted test results
Darin Adler
Comment 11 2016-06-09 09:38:15 PDT
Comment on attachment 280911 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280911&action=review > Source/WebCore/css/CSSComputedStyleDeclaration.cpp:1129 > + auto& positions = isRowAxis ? downcast<RenderGrid>(renderer)->columnPositions() : downcast<RenderGrid>(renderer)->rowPositions(); Even though it’s only used in one line of code, the local variable is a big help here, so I’d do it: auto& grid = downcast<RenderGrid>(*renderer); auto& positions = isRowAxis ? grid.columnPositions() : grid.rowPositions();
Sergio Villar Senin
Comment 12 2016-06-10 00:40:01 PDT
Note You need to log in before you can comment on or make changes to this bug.